# genesys-dice-textual

./: .gitignore  Makefile  README.md  dice.py  pyproject.toml  test-data.yaml
foundryvtt/: macro.js
src/: cli.py  dice.py  die_button.py  title_widgets.py  tray_screen.tcss  tui.py
src/genesys_dice/: __init__.py  __main__.py  cli.py  data.py  dice.py  roll-builders.yaml  serve.py  test-data.yaml
src/genesys_dice/tui/: __init__.py  app.py  app.tcss  messages.py  tray_screen.tcss
src/genesys_dice/tui/messages/: __init__.py  modal_message.py
src/genesys_dice/tui/modals/: __init__.py  additional_effects.py  callbacks.py  dice_faces.py  save.py
src/genesys_dice/tui/rich/: __init__.py  dice_faces.py
src/genesys_dice/tui/tabs/: __init__.py  data_tab.py  saved_rolls.py  templates.py  tray.py
src/genesys_dice/tui/widgets/: __init__.py  button_plus.py  die_button.py  label_input.py  title.py
