[project]
name = "genesys-dice-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rich>=13.9.3",
    "textual>=0.84.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
