[project]
name = "genesys-dice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "platformdirs>=4.3.6",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.3",
    "textual>=0.84.0",
]

[project.scripts]
genesys-dice = 'genesys_dice:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pdoc3>=0.11.1",
    "pytest>=8.3.3",
    "textual-dev>=1.6.1",
    "types-pyyaml>=6.0.12.20240917",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
