[project]
name = "genesys-dice"
version = "0.0.3-alpha"
authors = [
    { name="Draggor", email="draggor@gmail.com" },
]
description = "A die roller for the Genesys table top role playing game system and its special dice."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "platformdirs>=4.3.6",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.3",
    "textual>=0.84.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Typing :: Typed",
]

[project.scripts]
genesys-dice = 'genesys_dice:main'

[project.urls]
Homepage = "https://github.com/draggor/genesys-dice-textual"
Issues = "https://github.com/draggor/genesys-dice-textual/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pdoc3>=0.11.1",
    "py2wasm>=2.6.3",
    "pyinstaller>=6.11.0",
    "pytest>=8.3.3",
    "textual-dev>=1.6.1",
    "types-pyyaml>=6.0.12.20240917",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
